# k2-market-data-platform

./: .env.example  .env.v2  .env.v2.template  .gitignore  CHANGELOG.md  CLAUDE.md  CRASH_ANALYSIS.md  Dockerfile  Dockerfile.flink  END-OF-DAY-SUMMARY.md  KNOWN-ISSUES.md  KRAKEN-INTEGRATION-SUMMARY.md  LICENSE  Makefile  PHASE1_MEMORY_FIXES.md  README.md  RELEASE-NOTES-v0.1.md  REQUIREMENTS_UPDATE.md  RESOURCE_OPTIMIZATION_COMPLETE.md  SAFEGUARDS_SUMMARY.md  SESSION-SUMMARY-2026-02-10.md  TECHNICAL_DEBT.md  TODO.md  check_gold_table.py  docker-compose.phase5-consolidated.yml  docker-compose.phase5-iceberg.yml  docker-compose.v2.yml  docker-compose.yml  pyproject.toml  pytest.ini  recreate_gold_table.py  requirements-dev.txt  requirements.txt  todo.md
.github/: dependabot.yml
.github/workflows/: chaos-manual.yml  ci.yml  nightly.yml  post-merge.yml  pr-full-check.yml  pr-validation.yml  soak-weekly.yml
.opencode/plans/: phase-8-e2e-demo-plan.md  phase-8-executive-runbook.md  phase-8-implementation-plan.md  phase-8-testing-framework.md
backups/: iceberg_catalog_20260110_184744.sql  images_before_upgrade_20260110_163830.txt  topics_before_upgrade_20260110_163721.txt
backups/tests-backup/: __init__.py  conftest.py
config/: instruments.yaml
config/flink/: flink-conf.yaml  sql-gateway-defaults.yaml
config/flink-sql/: bronze_binance_ingestion.sql  bronze_binance_job.sql  bronze_binance_setup.sql  bronze_kraken_ingestion.sql  bronze_kraken_job.sql  bronze_kraken_setup.sql
config/hadoop/: core-site.xml
config/iceberg/: init.sql
config/kafka/: topics.yaml
config/prometheus/: prometheus.yml
data/sample/: README.md
demos/: README.md
demos/docs/: performance-validation.md  quick-start.md  technical-guide.md
demos/notebooks/: README.md  executive-demo.ipynb  getting-started.ipynb  spark-iceberg-queries.ipynb  technical-deep-dive.ipynb
demos/reference/: architecture-decisions.md  demo-checklist.md  key-metrics.md  quick-reference.md  useful-commands.md
demos/scripts/: README.md
docker/: README.md  v1-baseline.yml  v2-phase-1-baseline.yml
docker/clickhouse/: config.xml  setup_bronze_consumer.sql  setup_kraken_bronze.sql  users.xml
docker/offload/: create_bronze_iceberg_table.py  create_bronze_table_sql.py  create_iceberg_table.py  create_kraken_iceberg_table.py  generate_test_data.py  iceberg-offload-scheduler.service  iceberg_maintenance.py  metrics.py  offload-bronze-binance.py  offload_generic.py  scheduler.py  test_clickhouse_spark_connector.py  test_failure_recovery.py  test_idempotency.py  test_jdbc_basic.py  test_jdbc_clean.py  test_jdbc_driver_versions.py  test_jdbc_explicit_props.py  test_jdbc_latest.py  test_jdbc_native_protocol.py  test_jdbc_real_table.py  test_jdbc_simple_ssl.py  test_jdbc_trace.py  test_jdbc_url.py  test_jdbc_verbose.py  test_native_jdbc.py  test_parallel_offload.py  verify_iceberg_data.py  watermark.py  watermark_pg.py
docker/prefect/: Dockerfile  memo_store.toml
docker/prometheus/: prometheus.yml
docker/spark/: Dockerfile
docs/: ALTERNATIVE_ARCHITECTURES.md  CLAUDE.md  CORRECTNESS_TRADEOFFS.md  DATA_QUALITY.md  DISASTER_RECOVERY.md  FAILURE_RECOVERY.md  KAFKA_MIGRATION_SUMMARY.md  LATENCY_BACKPRESSURE.md  MAINTENANCE.md  MARKET_DATA_GUARANTEES.md  NAVIGATION.md  OBSERVABILITY_DASHBOARDS.md  PLATFORM_PRINCIPLES.md  QUALITY-CHECKLIST.md  README.md  RFC_TEMPLATE.md  STREAMING_VALIDATION.md  TECHNICAL_DEBT.md  TESTING.md  TESTING_STRATEGY.md  VERSIONING_POLICY.md
docs/architecture/: README.md  kafka-topic-strategy.md  kraken-normalization-guide.md  partitioning-strategy.md  platform-positioning.md  schema-design-v2.md  schema-v2-crypto-guide.md  streaming-pipeline-guide.md  streaming-sources.md  system-design.md  technology-stack.md
docs/archive/: CI_CD_IMPLEMENTATION_STATUS.md  CRASH_ANALYSIS.md  IMPLEMENTATION_PLAN_ORIGINAL.md  PHASE1_MEMORY_FIXES_PLAN.md  PROGRESS_OLD.md  README.md  SCHEMA_REGISTRATION_SETUP.md  STORAGE_OPTIMIZATION.md  V1-ARCHIVAL-PLAN.md
docs/consolidation/: PROGRESS.md  QUALITY-CHECKLIST.md  README.md
docs/decisions/: DECISION-013-spark-resource-optimization.md
docs/design/: README.md  query-architecture.md  stream-processing-evaluation.md
docs/governance/: data-source-assumptions.md
docs/implementation/: IMPLEMENTATION_PLAN.md  PROGRESS_OLD.md  README.md  STEP3_SUMMARY.md  VALIDATION_GUIDE.md
docs/operations/: CLICKHOUSE-DATABASE-STANDARD.md  DATA-INSPECTION.md  DOCKER-RESOURCES.md  PYCHARM-CLICKHOUSE-CONNECTION.md  QUICK-REFERENCE.md  QUICKSTART_RESOURCE_OPTIMIZATION.md  README.md  RESOURCE_OPTIMIZATION_SUMMARY.md  STREAMING_MONITORING_SPEC.md  STREAMING_PIPELINE_ANSWERS.md  TEST_REPORT_RESOURCE_OPTIMIZATION.md  adding-new-exchanges.md  ci-cd-pipeline.md  ci-cd-quickstart.md  cost-model.md  e2e-demo-checkpoint-20260113.md  e2e-demo-session-20260113.md  e2e-demo-success-summary.md  kafka-runbook.md  prefect-schedule-config.md  schema-registry-quickstart.md
flink-jobs/: Dockerfile  pom.xml  submit-job.sh  submit-test-job.sh
notebooks/: asx-demo.ipynb  binance-demo.ipynb  binance_e2e_demo.ipynb  demo.ipynb  k2_clean_demo_fixed.ipynb  k2_working_demo.ipynb
schemas/: README.md
scripts/: binance_stream.py  binance_stream_raw.py  check_gold_data.py  check_gold_trades.py  clean_demo_data.py  consume_crypto_trades.py  create_sample_dataset.py  create_trades_v2_table.py  delete_v1_data.py  demo.py  demo_degradation.py  demo_mode.py  deploy_blue_green.sh  download_flink_jars.sh  iceberg_maintenance.py  init_infra.py  kraken_stream.py  kraken_stream_raw.py  migrate_topics.py  performance_baseline.py  performance_benchmark.py  pre_demo_check.py  quality_gate.py  query_trades_v2.py  quick_gold_check.py  register_raw_schemas.py  reset_demo.py  simple_consumer.py  simulate_failure.py  start_bronze_binance.sh  start_bronze_kraken.sh  start_silver_binance.sh  start_silver_kraken.sh  submit-flink-bronze-jobs.sh  submit_bronze_job.py  submit_bronze_job.sh  submit_flink_jobs.py  test_binance_stream.py  test_e2e_kraken.py  test_kraken_deser.py  (+10 more)
tests/: README.md  __init__.py  conftest.py
(+898 files in other folders)
