[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k2-platform"
version = "0.1.0"
description = "Real-time market data platform with streaming ingestion and lakehouse storage"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["kafka", "iceberg", "market-data", "streaming", "lakehouse", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
]

# Core dependencies - required for all installations
dependencies = [
    # Kafka streaming
    "confluent-kafka[avro,schema-registry]>=2.13.0",  # Latest: 2.13.0 (2026-01-05)
    "kafka-python>=2.0.2",  # Alternative client for some operations

    # Schema management
    "avro>=1.11.3",
    "fastavro>=1.9.0",  # Faster Avro implementation

    # Apache Iceberg lakehouse
    "pyiceberg[s3fs,duckdb,pyarrow]>=0.10.0",  # Latest: 0.10.0 (2025)

    # Storage backends
    "s3fs>=2024.2.0",  # S3 filesystem interface
    "boto3>=1.42.0",   # Latest: 1.42.24 (2026-01-07) - AWS SDK

    # Query engine
    "duckdb>=1.4.0",  # Latest: 1.4.3 (2025-12-09)
    "pyarrow>=22.0.0",  # Latest: 22.0.0 (2025-10-24) - Columnar data format

    # Data processing
    "pandas>=2.3.0",  # Latest: 2.3.3 (2025-09-29), Python 3.14 support
    "polars>=1.36.0",  # Latest: 1.36.1 (2026-01), Modern fast dataframe library
    "numpy>=2.4.0",  # Latest: 2.4.0 (2025-12-20), NumPy 2.x series

    # Database
    "sqlalchemy>=2.0.45",  # Latest: 2.0.45 (2025-12-09), Python 3.14 support
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter
    "alembic>=1.17.0",  # Latest: 1.17.2 (2025), PEP 621 support - Database migrations

    # Configuration & Environment
    "pydantic>=2.12.0",  # Latest: 2.12.5 (2025), Python 3.14 support - Data validation
    "pydantic-settings>=2.12.0",  # Latest: 2.12.0 (2025) - Settings management
    "python-dotenv>=1.0.0",

    # Logging & Observability
    "structlog>=25.5.0",  # Latest: 25.5.0 (2025) - Enhanced async logging
    "prometheus-client>=0.23.0",  # Latest: 0.23.1 (2025-09) - Metrics
    "opentelemetry-api>=1.22.0",  # Distributed tracing
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-kafka-python>=0.43b0",

    # Utilities
    "tenacity>=8.2.3",  # Retry logic
    "click>=8.1.7",     # CLI framework
    "rich>=13.7.0",     # Beautiful terminal output
    "typer>=0.21.0",    # Latest: 0.21.1 (2026-01-06) - Modern CLI framework
]

[project.optional-dependencies]
# API server dependencies
api = [
    "fastapi>=0.128.0",  # Latest: 0.128.0 (2025-12-27), Python 3.9+ dropped
    "uvicorn[standard]>=0.40.0",  # Latest: 0.40.0 (2026), Python 3.10+ required
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.12.0",
    "slowapi>=0.1.9",  # Rate limiting
    "python-jose[cryptography]>=3.3.0",  # JWT tokens
    "passlib[bcrypt]>=1.7.4",  # Password hashing
]

# Development tools
dev = [
    # Testing
    "pytest>=9.0",  # Latest: 9.0.2 (2025), Python 3.10+ required
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-benchmark>=4.0.0",  # Performance benchmarks
    "pytest-mock>=3.12.0",
    "hypothesis>=6.98.0",  # Property-based testing
    "faker>=22.6.0",  # Test data generation

    # Code quality
    "black>=25.12.0",  # Latest: 25.12.0 (2025-12), Python 3.10+ required
    "isort>=5.13.0",
    "ruff>=0.14.0",  # Latest: 0.14.11 (2026-01-08)
    "mypy>=1.19.0",  # Latest: 1.19.1 (2025-12-15)
    "pylint>=3.0.0",

    # Type stubs
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
    "pandas-stubs>=2.1.0",

    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",  # Markdown support for Sphinx

    # Debugging
    "ipython>=8.21.0",
    "ipdb>=0.13.13",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",  # Sampling profiler
]

# Performance monitoring
monitoring = [
    "prometheus-fastapi-instrumentator>=6.1.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-exporter-jaeger>=1.22.0",
    "opentelemetry-exporter-prometheus>=0.43b0",
    "sentry-sdk>=1.40.0",  # Error tracking
]

# Data quality & validation
quality = [
    "great-expectations>=1.10.0",  # Latest: 1.10.0 (2025-12-18), Python 3.10-3.13
    "pandera>=0.18.0",  # DataFrame validation
]

# All optional dependencies
all = [
    "k2-platform[api,dev,monitoring,quality]",
]

[project.urls]
Homepage = "https://github.com/rjdscott/k2-market-data-platform"
Documentation = "https://k2-platform.readthedocs.io"
Repository = "https://github.com/rjdscott/k2-market-data-platform"
Issues = "https://github.com/rjdscott/k2-market-data-platform/issues"

[project.scripts]
# CLI entry points
k2 = "k2.cli:main"
k2-ingest = "k2.ingestion.cli:main"
k2-query = "k2.query.cli:main"
k2-api = "k2.api.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
k2 = ["py.typed"]

# ==============================================================================
# Development Tools Configuration
# ==============================================================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "S101",   # Use of assert (needed for pytest)
    "PLR0913", # Too many arguments
]

[tool.ruff.per-file-ignores]
"tests/*" = ["D", "ANN", "S101", "PLR2004"]  # Relax rules for tests
"scripts/*" = ["D", "T201"]  # Allow print in scripts

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false  # Decorators often don't have types
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "kafka.*",
    "pyiceberg.*",
    "duckdb.*",
    "s3fs.*",
    "fastavro.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=src/k2",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require Docker services)",
    "performance: Performance benchmarks",
    "slow: Slow tests (> 1 second)",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/k2"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
