[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k2-platform"
version = "0.1.0"
description = "Real-time market data platform with streaming ingestion and lakehouse storage"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["kafka", "iceberg", "market-data", "streaming", "lakehouse", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
]

# Core dependencies - required for all installations
dependencies = [
    # Kafka streaming
    "confluent-kafka[avro,schema-registry]>=2.13.0",  # Latest: 2.13.0 (2026-01-05)
    "kafka-python>=2.0.2",  # Alternative client for some operations
    # Schema management
    "avro>=1.11.3",
    "fastavro>=1.9.0",  # Faster Avro implementation
    # Apache Iceberg lakehouse
    "pyiceberg[s3fs,duckdb,pyarrow]>=0.10.0",  # Latest: 0.10.0 (2025)
    # Storage backends
    "s3fs>=2024.2.0",  # S3 filesystem interface
    "boto3>=1.42.0",   # Latest: 1.42.24 (2026-01-07) - AWS SDK
    # Query engine
    "duckdb>=1.4.0",  # Latest: 1.4.3 (2025-12-09)
    "pyarrow>=22.0.0",  # Latest: 22.0.0 (2025-10-24) - Columnar data format
    # Spark distributed processing
    "pyspark==3.5.0",  # Spark 3.5.0 for Medallion architecture (Iceberg 1.4.0 compatible)
    # Data processing
    "pandas>=2.3.0",  # Latest: 2.3.3 (2025-09-29), Python 3.14 support
    "polars>=1.36.0",  # Latest: 1.36.1 (2026-01), Modern fast dataframe library
    "numpy>=2.4.0",  # Latest: 2.4.0 (2025-12-20), NumPy 2.x series
    # Database
    "sqlalchemy>=2.0.45",  # Latest: 2.0.45 (2025-12-09), Python 3.14 support
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter
    "alembic>=1.17.0",  # Latest: 1.17.2 (2025), PEP 621 support - Database migrations
    # Configuration & Environment
    "pydantic>=2.12.0",  # Latest: 2.12.5 (2025), Python 3.14 support - Data validation
    "pydantic-settings>=2.12.0",  # Latest: 2.12.0 (2025) - Settings management
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",  # YAML configuration file parsing
    # Logging & Observability
    "structlog>=25.5.0",  # Latest: 25.5.0 (2025) - Enhanced async logging
    "prometheus-client>=0.23.0",  # Latest: 0.23.1 (2025-09) - Metrics
    "opentelemetry-api>=1.22.0",  # Distributed tracing
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-kafka-python>=0.43b0",
    # Utilities
    "tenacity>=8.2.3",  # Retry logic
    "click>=8.1.7",     # CLI framework
    "rich>=13.7.0",     # Beautiful terminal output
    "typer>=0.21.0",    # Latest: 0.21.1 (2026-01-06) - Modern CLI framework
    # WebSocket streaming
    "websockets>=13.0",  # Latest: 13.1 (2024-12), Async WebSocket client/server
    "certifi>=2024.8.30",  # Latest: 2024.8.30 (2024-09) - SSL certificate verification
    "docker==7.1.0",
    "pytest-timeout==2.4.0",
    "psutil>=7.2.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "pyasn1==0.6.2",
    "jupyter>=1.1.1",
    # Workflow orchestration
    "prefect>=3.1.0",  # Latest: 3.1.11 (2026), Lightweight workflow orchestration for OHLCV jobs
]

[project.optional-dependencies]
# API server dependencies
api = [
    "fastapi>=0.128.0",  # Latest: 0.128.0 (2025-12-27), Python 3.9+ dropped
    "uvicorn[standard]>=0.40.0",  # Latest: 0.40.0 (2026), Python 3.10+ required
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.9",
    "pydantic[email]>=2.12.0",
    "slowapi>=0.1.9",  # Rate limiting
    "python-jose[cryptography]>=3.3.0",  # JWT tokens
    "passlib[bcrypt]>=1.7.4",  # Password hashing
]

# Development tools
dev = [
    # Testing
    "pytest>=9.0",  # Latest: 9.0.2 (2025), Python 3.10+ required
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "pytest-benchmark>=4.0.0",  # Performance benchmarks
    "pytest-mock>=3.12.0",
    "hypothesis>=6.98.0",  # Property-based testing
    "faker>=22.6.0",  # Test data generation
    "pytest-spark==0.8.0",  # PySpark test fixtures - Latest: 0.8.0 (2026)
    "chispa==0.11.1",  # PySpark DataFrame comparison - Latest: 0.11.1 (2026)

    # Code quality
    "black>=25.12.0",  # Latest: 25.12.0 (2025-12), Python 3.10+ required
    "isort>=5.13.0",
    "ruff>=0.14.0",  # Latest: 0.14.11 (2026-01-08)
    "mypy>=1.19.0",  # Latest: 1.19.1 (2025-12-15)
    "pylint>=3.0.0",

    # Type stubs
    "types-requests>=2.31.0",
    "types-redis>=4.6.0",
    "pandas-stubs>=2.1.0",

    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",  # Markdown support for Sphinx

    # Debugging
    "ipython>=8.21.0",
    "ipdb>=0.13.13",
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",  # Sampling profiler
]

# Performance monitoring
monitoring = [
    "prometheus-fastapi-instrumentator>=6.1.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-exporter-jaeger>=1.21.0",  # Deprecated; 1.21.0 is final version
    "opentelemetry-exporter-prometheus>=0.43b0",
    "sentry-sdk>=1.40.0",  # Error tracking
]

# Data quality & validation
quality = [
    "great-expectations>=1.10.0",  # Latest: 1.10.0 (2025-12-18), Python 3.10-3.13
    "pandera>=0.18.0",  # DataFrame validation
]

# Notebook dependencies for demos
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "mplfinance>=0.12.0",  # Financial charts
    "requests>=2.31.0",  # API testing in notebooks
]

# All optional dependencies
all = [
    "k2-platform[api,dev,monitoring,quality]",
]

[project.urls]
Homepage = "https://github.com/rjdscott/k2-market-data-platform"
Documentation = "https://k2-platform.readthedocs.io"
Repository = "https://github.com/rjdscott/k2-market-data-platform"
Issues = "https://github.com/rjdscott/k2-market-data-platform/issues"

[project.scripts]
# CLI entry points
k2 = "k2.cli:main"
k2-ingest = "k2.ingestion.cli:main"
k2-query = "k2.query.cli:main"
k2-api = "k2.api.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
k2 = ["py.typed"]

# ==============================================================================
# Development Tools Configuration
# ==============================================================================

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors (essential)
    "F",   # pyflakes (essential - undefined names, unused imports)
    "I",   # isort (import sorting)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (modernize Python code)
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "I001",    # Import block unsorted (delegated to isort)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # Allow unused variables in tests-backup
"scripts/*" = []  # No special rules needed

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.13"
# Pragmatic configuration for active development
# Focus on catching obvious errors, not enforcing 100% type coverage

# Display settings
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

# Enabled checks (basic)
check_untyped_defs = false  # Too strict for now

# Disabled checks (too strict for active development)
warn_return_any = false
warn_unused_configs = false
warn_redundant_casts = false
warn_no_return = false
warn_unused_ignores = false
warn_unreachable = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_equality = false
disallow_any_generics = false
disallow_subclassing_any = false

# Allow more flexible attribute access and type mismatches
# These will be fixed incrementally as the codebase matures
disable_error_code = [
    "attr-defined",      # Allow attribute access on objects
    "union-attr",        # Allow attribute access on unions
    "operator",          # Allow operator type mismatches
    "return-value",      # Allow return type mismatches
    "arg-type",          # Allow argument type mismatches
    "assignment",        # Allow assignment type mismatches
    "call-arg",          # Allow call argument mismatches
    "misc",              # Miscellaneous errors
    "no-any-return",     # Allow returning Any
    "list-item",         # Allow list item type mismatches
    "dict-item",         # Allow dict item type mismatches
    "comparison-overlap", # Allow non-overlapping comparisons
    "import-untyped",    # Allow importing untyped libraries
    "no-untyped-def",    # Allow untyped definitions
    "no-untyped-call",   # Allow calling untyped functions
    "var-annotated",     # Allow variables without annotations
    "unreachable",       # Allow unreachable code
    "name-defined",      # Allow undefined names
]

[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "kafka.*",
    "pyiceberg.*",
    "duckdb.*",
    "s3fs.*",
    "fastavro.*",
    "yaml.*",
    "psutil.*",
    "pyarrow.*",
    "websockets.*",
]
ignore_missing_imports = true

# Ignore type checking for files with Avro deserialization patterns
# These files work with dynamic Avro record types that mypy cannot infer
[[tool.mypy.overrides]]
module = [
    "k2.spark.udfs.raw_to_v2_transformation",
    "k2.spark.udfs.avro_deserialization",
    "k2.spark.validation.trade_validation",
    "k2.ingestion.kraken_client",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# CRITICAL: Exclude resource-intensive tests-backup by default
# Coverage removed from default (adds 20-30% overhead) - add --cov flag explicitly if needed
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    # Exclude heavy tests-backup by default - must explicitly opt-in with -m flag
    # IMPORTANT: performance tests-backup excluded to prevent OOM when running with -n auto
    "-m", "not slow and not chaos and not soak and not operational and not performance and not e2e",
    # Limit parallel workers to prevent OOM
    # 4 workers = safer for CI (7GB / 4 = 1.75GB per worker)
    # Override locally if you have 16GB+: pytest -n 8
    "-n", "4",
    # Distribute tests-backup by file to reduce fixture overhead
    "--dist", "loadfile",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require Docker services)",
    "performance: Performance benchmarks (memory intensive, run sequentially with -n 0)",
    "slow: Slow tests (> 1 second)",
    "soak: Soak tests (long-running endurance tests, hours to days)",
    "chaos: Chaos engineering tests (destructive, manipulates Docker)",
    "operational: Operational/disaster recovery tests (destructive)",
    "e2e: End-to-end tests (require full Docker stack, slow)",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
# pytest-asyncio configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# pytest-timeout: Apply default timeout to all tests-backup (can be overridden per-test)
timeout = 300  # 5 minutes default
timeout_method = "thread"

[tool.coverage.run]
source = ["src/k2"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ==============================================================================
# UV Configuration
# ==============================================================================

[tool.uv]
# Use managed Python from .python-version
python-preference = "managed"

[dependency-groups]
# Default dev dependencies for 'uv sync'
dev = ["k2-platform[all]"]
